Users, persoon and employment information and layout